[package]
name = "lockless"
version = "0.1.0"
authors = ["aceeri (conmcclusk@gmail.com)"]

[dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst", branch = "develop" }
specs = { version = "0.11.0", features = ["common"] }
shred = { version = "0.7.0", features = ["nightly"] }
shrev = "1.0.0"
machinae = { git = "https://github.com/aceeri/machinae" }
rayon = "1.0.1"
nalgebra = "0.14"
ncollide3d = "0.15"
nphysics3d = "0.8"
smallvec = "*"
genmesh = "*"
cgmath = "*"
specs-hierarchy = "0.1.0"

