[package]
name = "lockless"
version = "0.1.0"
authors = ["aceeri (conmcclusk@gmail.com)"]

[dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst", branch = "develop" }
machinae = { git = "https://github.com/aceeri/machinae" }
rayon = "1.0.1"
nalgebra = "0.14"
ncollide3d = "0.15"
nphysics3d = "0.8"
smallvec = "*"
genmesh = "*"
specs-hierarchy = { version = "0.2" }
rand = "*"
fern = { version = "0.5", features = ["colored"] }
log = "0.4"

[features]
nightly = ["amethyst/nightly"]

