[package]
name = "voxel"
description = "Voxel related utilities"
version = "0.1.0"
authors = ["Aceeri <conmcclusk@gmail.com>"]
edition = "2018"

[dependencies]
ron = "0.5.1"
serde = { version = "1", features = ["serde_derive"] }

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "surrounding_bench"
harness = false
