[package]
name = "voxel"
description = "Voxel related utilities"
version = "0.1.0"
authors = ["Aceeri <conmcclusk@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"
util = { path = "../util" }

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "surrounding_bench"
harness = false
